# NIMS-FL

./: LICENSE  README.md
federated-learning/: .gitignore  Makefile  RELEASE_NOTES.md  install_additional_dependencies.sh  pyproject.toml  setup.cfg  tox.ini
federated-learning/docs/: Makefile
federated-learning/docs/source/: conf.py  index.rst
federated-learning/docs/source/configuration_details/: configuration_mila.rst  configuration_model.rst
federated-learning/docs/source/module_details/: aggregators.rst  criterions.rst  featurizers.rst  loaders.rst  models.rst  splitters.rst  transformers.rst
federated-learning/docs/source/modules/: architectures.rst  criterions.rst  executors.rst  layers.rst  metrics.rst  optimizers.rst  trackers.rst
federated-learning/docs/source/notes/: configuration_overview.rst  framework_overview.rst  getting_started.rst
federated-learning/docs/source/tutorials/: ssl_connection.rst  using_experiment_config.rst  using_optuna.rst
federated-learning/make/: rules.make  setup.make
federated-learning/src/federated_learning/: run.py
federated-learning/src/federated_learning/lib/core/: config.py  helpers.py  observers.py  tuning.py
federated-learning/src/federated_learning/lib/data/: featurizers.py  loaders.py  resources.py  splitters.py  streamers.py  transformers.py
federated-learning/src/federated_learning/lib/model/: architectures.py  criterions.py  executors.py  layers.py  metrics.py  optimizers.py  trackers.py
federated-learning/src/federated_learning/mila/: aggregators.py  configs.py  factories.py  run.py  services.py
(+33 files in other folders)
