[metadata]
name = federated-learning
version = 2.2
description = "Federated Learning"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nims-federated-learning/NIMS-FL
author = "NIMS"
author_email = "nims-fedarated-learning@ml.nims.go.jp"

[options]
python_requires = >=3.8
package_dir =
  =src
packages = find:
install_requires =
  optuna == 2.10.0
  cairosvg == 2.5.2
  pyhumps == 3.0.2
  scikit-learn == 0.24.2
  pandas == 1.3.2
  grpcio == 1.31.0
  grpcio-tools == 1.31.0
  opacus==0.11.0
  mordred==1.2.0
  numpy == 1.19.1

[options.extras_require]
cpu =
  elix-torch[cpu] ~= 2.0.0
  torchvision == 0.9.2+cpu
cuda-11.1 =
  elix-torch[cuda-11.1] ~= 2.0.0
  torchvision == 0.9.2+cu111
cuda-10.2 =
  elix-torch[cuda-10.2] ~= 2.0.0
  torchvision == 0.9.2+cu102
geometric =
  torch-cluster == 1.5.9
  torch-scatter == 2.0.7; python_version < "3.9"
  torch-scatter == 2.0.8; python_version >= "3.9"
  torch-sparse == 0.6.12
  torch-spline-conv == 1.2.1
  torch-geometric == 1.6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  nims-federated-learning = federated_learning.mila.run:main
  nims-federated-learning-base = federated_learning.run:main